# golem-cli

./: .gitignore  Cargo.toml  Makefile.toml  README.md  scenario1.json  scenario2.json  scenario3.json  scenario4.json
.github/workflows/: ci.yaml  desktop-ci.yaml  mcp-serve-tests.yml
desktop-app/: .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
desktop-app/src/: App.tsx  routes.tsx
desktop-app/src-tauri/: Cargo.toml
desktop-app/src-tauri/capabilities/: default.json
desktop-app/src-tauri/src/: lib.rs
desktop-app/src-tauri/src/commands/: backend_commands.rs  golem_commands.rs  settings_commands.rs
desktop-app/src/__tests__/: App.test.tsx
desktop-app/src/__tests__/integration/: app-workflow.test.tsx
desktop-app/src/components/: backend-endpoint.tsx  create-profile-dialog.tsx  empty-state.tsx  errorBoundary.tsx  golem-cli-path.tsx  log-viewer.tsx  navLink.tsx  navbar.tsx  profile-manager.tsx  rib-editor.tsx  server-status.tsx  theme-provider.tsx  yaml-editor.tsx  yaml-uploader.tsx  yaml-viewer-modal.tsx
desktop-app/src/components/__tests__/: Modal.test.tsx  errorBoundary.test.tsx  file-manager.test.tsx  golem-cli-path.test.tsx  logo.test.tsx  mode-toggle.test.tsx  navLink.test.tsx  navbar.test.tsx  rib-editor.test.tsx  server-status.test.tsx  theme-provider.test.tsx  yaml-editor.test.tsx  yaml-uploader.test.tsx
desktop-app/src/components/common/: mobile-nav.tsx
desktop-app/src/components/invoke/: InvokeLayout.tsx  RecursiveParameterInput.tsx  SectionCard.tsx
desktop-app/src/components/ui/: button.tsx  card.tsx  code-block.tsx  sidebar.tsx  toast.tsx
desktop-app/src/constants/: navbar.ts
desktop-app/src/hooks/: use-toast.ts  useInvoke.ts
desktop-app/src/hooks/__tests__/: debounce.test.tsx  use-mobile.test.tsx  use-toast.test.ts  use-toast.test.tsx
desktop-app/src/layouts/: app-layout.tsx  settings-layout.tsx
desktop-app/src/layouts/__tests__/: app-layout.test.tsx
desktop-app/src/lib/: http-handler.ts  settings.ts  tauri&web.ts  utils.ts  wave.ts  worker.ts
desktop-app/src/lib/__tests__/: settings.test.ts  tauri&web.test.ts  wave.test.ts  worker.test.ts
desktop-app/src/pages/: not-found.tsx
desktop-app/src/pages/api/: index.tsx
desktop-app/src/pages/app/: yaml-viewer.tsx
desktop-app/src/pages/app-create/: index.tsx
desktop-app/src/pages/components/: index.tsx
desktop-app/src/pages/dashboard/: apiSection.tsx  componentSection.tsx  deploymentSection.tsx  index.tsx
desktop-app/src/pages/deployment/: create.tsx  index.tsx
desktop-app/src/pages/home/: index.tsx
desktop-app/src/pages/plugin/: create.tsx  index.tsx  (+1 more)
desktop-app/src/service/: client.ts  error-handler.ts  index.ts  profile.ts  wss.ts
desktop-app/src/test/: global.d.ts  setup.ts  vitest.d.ts
desktop-app/src/types/: component.ts  golemManifest.ts  worker.ts
docs/mcp-serve/: cli-flags-and-entry-serve-mode.md  dependencies-and-features.md  e2e-tests-mcp.md  implementation-checklist.md  logging-and-ux.md  resources-manifest-discovery.md  serve-mode-overview.md  tools-generation-and-invocation.md
golem/: Cargo.toml
golem-cli/: Cargo.toml  build.rs
golem-cli/agent_wrapper/builder/: item_builder.mbt  top.mbt
golem-cli/agent_wrapper/extractor/: top.mbt
golem-cli/src/: auth.rs  cloud.rs  command.rs  command_handler.rs  command_handler_v_1_2.rs  command_old.rs  command_v_1_2.rs  config.rs  connect_output.rs  context.rs  diagnose.rs  error.rs  fs.rs  fuzzy.rs  init.rs  lib.rs  log.rs  main.rs  main_old.rs  main_v_1_2.rs  model.rs
golem-cli/src/app/: context.rs  error.rs  yaml_edit.rs
golem-cli/src/clients/: worker.rs
golem-cli/src/command_handler/: app.rs  component.rs  interactive.rs  log.rs  mod.rs  partial_match.rs  plugin.rs  rib_repl.rs  worker.rs
golem-cli/src/command_old/: component.rs  plugin.rs  worker.rs
golem-cli/src/model/: api.rs  app.rs  app_ext.rs  app_raw.rs  cascade.rs  component.rs  deploy_diff.rs  invoke_result_view.rs  mod.rs  project.rs  template.rs  text.rs  to_cli.rs  to_cloud.rs  worker.rs
golem-cli/src/oss/: cli.rs
golem-cli/src/serve/: mod.rs
golem-cli/src/service/: worker.rs
golem-cli/src/wasm_metadata/: producers.rs
golem-cli/src/wasm_rpc_stubgen/: cargo.rs  compilation.rs  rust.rs  stub.rs  wit_generate.rs  wit_resolve.rs
golem-cli/test-data/cargo/: Cargo.toml.with_deps_and_comments
golem-cli/tests/: lib.rs  profile.rs
golem-cli/tests/app/: mod.rs  plugins.rs
golem-cli/tests/stubgen/: add_dep.rs  stub_wasm.rs
golem-cli/wit/: deps.toml
golem-cloud-cli/src/: cloud_main.rs  lib.rs  universal_main.rs
golem-cloud-cli/src/cloud/: cli.rs  model.rs
golem-cloud-client/: Cargo.toml
golem-cloud-client/openapi/: golem-cloud-service.yaml
golem-examples/: Cargo.toml
golem-examples/src/: cli.rs  lib.rs  model.rs
golem-examples/src/test/: main.rs
golem-examples/tests/: integration.rs
golem-templates/: Cargo.toml  README.md
golem-templates/src/: lib.rs  model.rs
golem-templates/src/test/: main.rs
golem/src/: command.rs  command_handler.rs  launch.rs  lib.rs  router.rs
md/: e2e-tests-mcp.md  implementation-checklist.md  serve-mode-overview.md  serve-mode-pr.md  serve-mode-progress.md
scripts/: it.sh
src/: account.rs  auth.rs  clients.rs  command.rs  instance.rs  main.rs  model.rs  worker.rs
src/clients/: account.rs  errors.rs  grant.rs  instance.rs  login.rs  policy.rs  project.rs  project_grant.rs  template.rs  token.rs  worker.rs
src/command_handler/: mod.rs
src/serve/: mod.rs
template-golem-agent-ts/: package-lock.json  package.json
tests/: cli.rs  mcp_resources_roundtrip.rs  mcp_resources_sse.rs  mcp_serve_smoke.rs  mcp_stream_http.rs  mcp_tools_roundtrip.rs  mcp_tools_sse.rs  sharding.rs
wasm-rpc-stubgen/: Cargo.toml
wasm-rpc-stubgen/src/: cargo.rs  lib.rs  log.rs  naming.rs  rust.rs  stub.rs  wit_generate.rs  wit_resolve.rs
wasm-rpc-stubgen/src/commands/: app.rs  generate.rs  mod.rs
wasm-rpc-stubgen/src/model/: app.rs
wasm-rpc-stubgen/tests/: add_dep.rs  compose.rs  stub_wasm.rs  wit.rs
(+179 files in other folders)
