[package]
name = "golem-cloud-client"
version = "0.0.0"
edition = "2021"
license = "Apache-2.0"
description = "Client for Golem Cloud's REST API"

include = ["src/**/*", "Cargo.toml", "build.rs", "openapi/**/*"]

[lib]
harness = false

[dependencies]
# NOTE: these cannot be workspace (git) deps, as that breaks publishing
golem-client = { path="../../golem-fork/golem-client", version="=0.0.0"}
golem-common = { path="../../golem-fork/golem-common", version="=0.0.0"}
golem-wasm-ast = { path="../../golem-fork/wasm-ast", version="=0.0.0", default-features = false, features = ["analysis", "wave"] }
golem-wasm-rpc = { path="../../golem-fork/wasm-rpc", version="=0.0.0", default-features = false, features = ["host"] }

async-trait = "^0.1"
bytes = "^1.5"
chrono = { version = "^0.4", features = ["serde"] }
futures-core = "^0.3"
http = "^1.0"
reqwest = { version = "^0.12", features = [
    "gzip",
    "json",
    "multipart",
    "stream",
] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
serde_yaml = { workspace = true }
tracing = "^0.1"
uuid = { version = "^1.6", features = ["serde"] }
thiserror = "2.0.12"

[dev-dependencies]
test-r = { workspace = true }

[build-dependencies]
golem-openapi-client-generator = "0.0.15"
serde_yaml = { workspace = true }
