[package]
name = "golem-examples"
version = "0.0.0"
edition = "2021"
license = "Apache-2.0"
homepage = "https://golem.cloud"
repository = "https://github.com/golemcloud/golem-cli"
description = "Golem example templates"
default-run = "golem-examples-cli"

[dependencies]
Inflector = { workspace = true }
clap = { workspace = true, optional = true }
colored = { workspace = true }
derive_more = { workspace = true }
fancy-regex = { workspace = true }
fs_extra = { workspace = true }
golem-wit = { workspace = true }
include_dir = { workspace = true }
itertools = { workspace = true }
nanoid = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
toml_edit = { workspace = true }

[build-dependencies]
cargo_metadata = { workspace = true }
dir-diff = { workspace = true }
fs_extra = { workspace = true }

[features]
default = ["cli"]
cli = ["dep:clap"]

[lib]
path = "src/lib.rs"

[[bin]]
name = "golem-examples-cli"
path = "src/main.rs"
required-features = ["cli"]

[[bin]]
name = "golem-examples-test-cli"
path = "src/test/main.rs"
required-features = ["cli"]
