[package]
name = "golem"
version = "0.0.0"
edition = "2021"
license-file = "../LICENSE"
homepage = "https://golem.cloud/"
repository = "https://github.com/golemcloud/golem-cli"
readme = "README.md"
description = "Single Golem executable for testing"

[lib]
harness = false

[[bin]]
name = "golem"
path = "src/main.rs"
test = false

[dependencies]
# Repo deps
golem-cli = { path = "../golem-cli", features = [
    "server-commands",
], version = "=0.0.0" }

# Golem - git deps
golem-common = { path = "../../golem/golem-common" }
golem-service-base = { path = "../../golem/golem-service-base" }
golem-component-compilation-service = { path = "../../golem/golem-component-compilation-service" }
golem-component-service = { path = "../../golem/golem-component-service" }
golem-component-service-base = { path = "../../golem/golem-component-service-base" }
golem-shard-manager = { path = "../../golem/golem-shard-manager" }
golem-worker-executor = { path = "../../golem/golem-worker-executor" }
golem-worker-service = { path = "../../golem/golem-worker-service" }
golem-worker-service-base = { path = "../../golem/golem-worker-service-base" }


# External deps
anyhow = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
clap = { workspace = true }
clap-verbosity-flag = { workspace = true }
darling = { workspace = true }
dirs = { workspace = true }
http-body-util = { workspace = true }
hyper = { workspace = true }
futures = { workspace = true }
include_dir = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry-prometheus = { workspace = true }
opentelemetry_sdk = { workspace = true }
poem = { workspace = true }
prometheus = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
rustls = { workspace = true }
serde = { workspace = true }
sqlx = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
test-r = { workspace = true }
